; ModuleID = '/home/carl/AnghaBench/git/extr_chdir-notify.c_chdir_notify_register.c'
source_filename = "/home/carl/AnghaBench/git/extr_chdir-notify.c_chdir_notify_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chdir_notify_entry = type { i8*, i32, i8*, i32 }

@chdir_notify_entries = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @chdir_notify_register(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.chdir_notify_entry*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = call %struct.chdir_notify_entry* @xmalloc(i32 32)
  store %struct.chdir_notify_entry* %8, %struct.chdir_notify_entry** %7, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load %struct.chdir_notify_entry*, %struct.chdir_notify_entry** %7, align 8
  %11 = getelementptr inbounds %struct.chdir_notify_entry, %struct.chdir_notify_entry* %10, i32 0, i32 0
  store i8* %9, i8** %11, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.chdir_notify_entry*, %struct.chdir_notify_entry** %7, align 8
  %14 = getelementptr inbounds %struct.chdir_notify_entry, %struct.chdir_notify_entry* %13, i32 0, i32 3
  store i32 %12, i32* %14, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.chdir_notify_entry*, %struct.chdir_notify_entry** %7, align 8
  %17 = getelementptr inbounds %struct.chdir_notify_entry, %struct.chdir_notify_entry* %16, i32 0, i32 2
  store i8* %15, i8** %17, align 8
  %18 = load %struct.chdir_notify_entry*, %struct.chdir_notify_entry** %7, align 8
  %19 = getelementptr inbounds %struct.chdir_notify_entry, %struct.chdir_notify_entry* %18, i32 0, i32 1
  %20 = call i32 @list_add_tail(i32* %19, i32* @chdir_notify_entries)
  ret void
}

declare dso_local %struct.chdir_notify_entry* @xmalloc(i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
